--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,6 +134,24 @@ plugins:
       cache_safe: true
       
 extra:
+  analytics:
+    provider: google
+    property: G-WDJ90STE54
+    feedback:
+      title: Was this page helpful?
+      ratings:
+        - icon: material/emoticon-happy-outline
+          name: This page was helpful
+          data: 1
+          note: >-
+            Thanks for your feedback!
+        - icon: material/emoticon-sad-outline
+          name: This page could be improved
+          data: 0
+          note: >- 
+            Thanks for your feedback! Help us improve this page by
+            submitting an issue to our 
+            [GitHub repository](https://github.com/promptxai/promptxai.github.io/issues/new/?title=[Feedback]+{title}+-+{url}).
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/promptxai/promptxai
@@ -172,6 +190,8 @@ extra:
 extra_css:
   - assets/stylesheets/extra.css
 
+extra_javascript:
+  - javascripts/feedback.js
 
 nav:
   - Home: index.md
