--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,27 @@
 bs4
 markdownify
-openai
 urllib3
-stability-sdk
+
 notebook
 nbconvert
 pyppeteer
 pypdf
+ipywidgets
+
 torch
 torchvision
 transformers
-ipywidgets
 
+openai
+stability-sdk
+
+mkdocs-material
 mkdocs-glightbox
 mkdocs-jupyter
 mkdocs-minify-plugin
+mkdocs-exclude-search
+
 pymdown-extensions
 pygments
-mkdocs-material
 cairosvg
 pillow
