--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ theme:
     - search.suggest
     - navigation.footer
     - navigation.indexes
+    - navigation.instant
+    - navigation.tracking
     - navigation.sections
     - navigation.tabs
     - navigation.top
