--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -264,6 +264,7 @@ nav:
   - Design:
     - Intersection of Generative AI and Product Design: design/generative-ai-ux-design.md
     - Design Playbook Series - AI-Powered Experience Design: design/design-playbook-ai-powered-experience-design.md
+    - Design Playbook Series - Navigating the Risks and Limitations of AI in Design: design/navigating-the-risks-and-limitations-of-AI-in-design.md
   - API:
     - PromptxAI API: api/promptxai-api.md
     - Playbook:
